c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/sizeof_void.c
int main(void) {
    return sizeof (void); // can only apply sizeof to complete types
}